# Advanced_Python

Homework 1/: HW1.py
Homework 1/Homework1/: setup.py
Homework 1/Homework1/circle_shrshryo/: circle.py  test.py
Homework 1/Homework1/circle_shrshryo.egg-info/: PKG-INFO  SOURCES.txt
Homework 1/Homework1/tests/: test_circle.py
Homework 1/circle_ryshir/: setup.cfg
Homework 1/circle_ryshir/circle_ryshir/: circle.py
Homework 1/circle_ryshir/circle_ryshir.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Homework 1/packaging_tutorial/: setup.cfg
Homework 1/packaging_tutorial/example_pkg_ryshir.egg-info/: PKG-INFO  SOURCES.txt
Homework 2/: DINERS.db  Database.py
Ryo Homework Three/: FlightPath3.py  flights21.csv
Ryo Shiraishi Homework Four/: PythonSpider.py  output.json
