[metadata]
# replace with your username:
name = circle_ryshir
version = 0.0.1
author = Ryo Shiraishi
author_email = ryshir@ttu.ee
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url =
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6